--- a/_data/site_config.yml
+++ b/_data/site_config.yml
@@ -113,7 +113,9 @@ goal_image_base: 'https://open-sdg.org/sdg-translations/assets/img/goals'
 goal_image_extension: ''
 goals_page:
   title: general.goals
-  description: goal.description
+  description: >-
+    Click on each goal to see Liverpool statistics for Sustainable Development
+    Goal global indicators.
 graph_color_headline: '#004466'
 graph_color_headline_high_contrast: '#55a6e5'
 graph_color_set: accessible
