--- a/_data/site_config.yml
+++ b/_data/site_config.yml
@@ -130,20 +130,26 @@ indicator_config_form:
   enabled: true
   dropdowns: []
   repository_link: >-
-    https://github.com/open-sdg/open-sdg-data-starter/tree/develop/indicator-config
+    https://github.com/sdg-liverpool/data/tree/develop/indicator-config
   translation_link: ''
 indicator_data_form:
   enabled: true
-  repository_link: 'https://github.com/open-sdg/open-sdg-data-starter/tree/develop/data'
+  repository_link: 'https://github.com/sdg-liverpool/data/tree/develop/data'
 indicator_metadata_form:
   enabled: true
   dropdowns: []
-  repository_link: 'https://github.com/open-sdg/open-sdg-data-starter/tree/develop/meta'
+  repository_link: 'https://github.com/sdg-liverpool/data/tree/develop/meta'
   translation_link: ''
   language: ''
   scopes:
     - national
     - global
+    - source_1
+    - source_2
+    - source_3
+    - source_4
+    - source_5
+    - source_6
   exclude_fields: []
   translated: false
 languages:
