--- a/_data/site_config_prod.yml
+++ b/_data/site_config_prod.yml
@@ -19,5 +19,4 @@ environment: production
 remote_data_prefix: "https://my-github-org.github.io/open-sdg-data-starter"
 
 analytics:
-  # For production, you likely want to enter a Google Analytics code below.
-  ga_prod: ''
+  gtag: G-2P1TEJC73Z
