Some config for 1.5.0

--- a/_data/site_config.yml
+++ b/_data/site_config.yml
@@ -1,6 +1,9 @@
 ﻿accessible_charts: true
 accessible_tabs: true
 analytics:
+  ua: ''
+  gtag: ''
+  gtm: ''
   ga_prod: ''
 breadcrumbs:
   goal:
@@ -19,6 +22,8 @@ breadcrumbs:
     - path: /news
       label: menu.updates
 contrast_type: default
+cookie_consent_form:
+  enabled: true
 country:
   name: Liverpool
   adjective: Liverpool
@@ -66,6 +71,7 @@ email_contacts:
   suggestions: test@example.com
   functional: test@example.com
 environment: staging
+favicons: favicon.io
 footer_language_toggle: none
 footer_menu:
   - path: 'https://the2030hub.com/contact/'
@@ -141,6 +147,8 @@ header:
   include: header-menu-left-aligned.html
 header_language_toggle: dropdown
 hide_empty_metadata: true
+hide_single_series: true
+hide_single_unit: true
 indicator_config_form:
   enabled: true
   dropdowns: []
@@ -241,3 +249,4 @@ site_config_form:
   translation_link: ''
 validate_indicator_config: false
 validate_site_config: false
+x_axis_label: ''
