Add email addresses

--- a/_data/site_config.yml
+++ b/_data/site_config.yml
@@ -67,9 +67,9 @@ disclaimer:
   phase: ''
   message: ''
 email_contacts:
-  questions: test@example.com
-  suggestions: test@example.com
-  functional: test@example.com
+  questions: info@the2030hub.com
+  suggestions: info@the2030hub.com
+  functional: info@the2030hub.com
 environment: staging
 favicons: favicon.io
 footer_language_toggle: none
